# shskills

./: .gitignore  CLAUDE.md  pyproject.toml
.github/workflows/: release.yml
AGENT_PROMPTS/: STEPS.md
AGENT_PROMPTS/applied/: INIT_PROMPT_1_SONNET.md
AGENT_PROMPTS/examples/: INIT_PROMPT_1_OPUS.md
SKILLS/common/welcome_note/: SKILL.md  SKILLL.md
defaults/claude/: settings.json
src/shskills/: __init__.py  cli.py  config.py  exceptions.py  models.py
src/shskills/adapters/: __init__.py  base.py  claude.py  codex.py  custom.py  gemini.py  opencode.py
src/shskills/core/: fetcher.py  installer.py  manifest.py  planner.py  validator.py
tests/: test_adapters.py  test_cli.py  test_fetcher.py  test_installer.py  test_manifest.py  test_planner.py  test_validator.py
tests/integration/: test_install_e2e.py
