[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shskills"
version = "0.1.0"
description = "Install agent skills from GitHub repositories"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "shskills contributors" }]
keywords = ["ai", "agents", "skills", "cli", "claude", "codex", "gemini"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.scripts]
shskills = "shskills.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.11",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/shskills"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["shskills"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=shskills --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src/shskills"]
